# pinn-cps

./: .gitignore  README.md  pyproject.toml  requirements.txt
configs/: ablation_no_energy.yaml  ablation_no_kinematic.yaml  ablation_no_smooth.yaml  default.yaml  medium.yaml  mrclam.yaml  smoke.yaml
scripts/: evaluate.py  evaluate_ocsvm_feature_ablation.py  evaluate_score_variants.py  generate_data.py  make_figures.py  prepare_mrclam.py  run_ablations.py  run_main.py  run_mrclam_suite.py  train.py
src/pinncps/: __init__.py
src/pinncps/attacks/: __init__.py  base.py  command_injection.py  gps_spoofing.py  packet.py  registry.py  replay.py  sensor_bias.py
src/pinncps/data/: __init__.py  dataset.py
src/pinncps/eval/: __init__.py  metrics.py  plots.py
src/pinncps/models/: __init__.py  baselines.py  classical.py  detector.py  pinn.py
src/pinncps/sim/: __init__.py  robot.py  sensors.py  trajectory.py
src/pinncps/training/: __init__.py  trainer.py
src/pinncps/utils/: __init__.py  config.py  seed.py
tests/: test_attacks.py  test_metrics.py  test_pinn.py  test_robot.py
