[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "pinncps"
version = "0.1.0"
description = "Physics-residual digital twin for FDI detection in IoRT"
readme = "README.md"
requires-python = ">=3.9"
authors = [{name = "Daniel"}]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
pythonpath = ["src"]
